# btclib

./: .gitignore  MANIFEST.in  curves.json  serialization.py  setup.cfg  setup.py
btclib/: blocks.py
btclib/tests/: test_blocks.py
scripts/: ElectrumWallet.py  bech32.py  bip32.py  bip32_functions.py  bip39.py  bip39Wallet.py  change_receive_path.py  electrum_seed.py  rfc6979.py
