[metadata]
url = 'http://github.com/btclib-org/btclib'
author = 'The btclib developers'
description = 'A "bitcoin cryptography" library.'
keywords = 'bitcoin cryptography elliptic-curves ecdsa schnorr RFC-6979 bip32 bip39 electrum base58 bech32 segwit message-signing'
python_requires = '>=3.8'
classifiers = [
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.8',

    'Development Status :: 4 - Beta',

    'Intended Audience :: Developers',
    'Intended Audience :: Education',

    'License :: OSI Approved :: MIT License',

    'Natural Language :: English',

    'Operating System :: OS Independent',

    'Topic :: Security :: Cryptography',
    'Topic :: Scientific/Engineering',
    'Topic :: Software Development :: Libraries :: Python Modules',
]

[bdist_wheel]
# Prevent bdist_wheel from trying to make a universal wheel.
# btclib only works for pyton>=3.8
# https://packaging.python.org/guides/distributing-packages-using-setuptools/#wheels
universal=0
